syntax = "proto3";
package realms;
import "dto.proto";

option java_multiple_files = true;
option java_package = "com.sitech.users";
//import "google/protobuf/any.proto";
//import "google/protobuf/struct.proto";

service UserService {
  rpc AddUser (AddUserRequest) returns (UserResponse) {};

  rpc GetUserById(GetUserByUserNameRequest) returns(UserResponse) {};

  rpc GetUserByUserName(GetUserByUserNameRequest) returns(UserResponse) {};

  rpc GetUserByEmail(GetUserByUserNameRequest) returns(UserResponse) {};

  rpc GetUserGroups(GetUserGroupRequest) returns(GetUserGroupsResponse) {};

  rpc GetUserRoleEffective(UserRoleRequest) returns(GetUserRoleResponse) {};

  rpc GetUserRoleAvailable(UserRoleRequest) returns(GetUserRoleResponse) {};

  rpc FindAllUsersInGroup(UserGroupRequest) returns(UsersResponse) {};

  rpc AddUserToGroup(AddUserGroupRequest) returns(StatusReplay) {};

  rpc FindUserByRole(FindUserRoleRequest) returns(UsersResponse) {};

  rpc AddUserRole(AddUserRoleRequest) returns(StatusReplay) {};

  rpc updateUser(UpdateUserRequest) returns (UserResponse) {};

  rpc updateUserPassword(UpdateUserPasswordRequest) returns (StatusReplay) {};

  rpc FindAllUsersInRealm(GetUsersRequest) returns(UsersResponse) {};

  rpc updateUserAttributes(updateUserAttributesRequest) returns(UserResponse) {};
}

message UpdateUserPasswordRequest{
  string realmName = 1;
  string userId = 2;
  string password = 3;
}

message GetUserByUserNameRequest{
  string realmName = 1;
  string userId = 2;
  string userName = 3;
  string userEmail = 4;
}

message AddUserRoleRequest{
  string realmName = 1;
  string userName = 2;
  string roleName = 3;
}

message FindUserRoleRequest{
  string realmName = 1;
  string roleName = 2;
}

message AddUserGroupRequest{
  string realmName = 1;
  string userName = 2;
  string groupName = 3;
}

message AddUserRequest {
  string userName = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
  string realmName = 6;
  string role = 7;
  string group = 8;
  map<string, string> attributes = 9;
}


message UpdateUserRequest {
  string realmName = 1;
  string userId = 2;
  string userName = 3;
  string firstName = 4;
  string lastName = 5;
  string email = 6;
  bool enabled = 7;
  string role = 8;
  string group = 9;
}

message UserGroupRequest{
  string realmName = 1;
  string groupName = 2;
}

message GetUserGroupRequest{
  string realmName = 1;
  string userId = 2;
}

message UserRoleRequest{
  string realmName = 1;
  string userId = 2;
}

message StatusReplay {
  string statusCode = 1;
  string responseMessage = 2;
}

message GetUsersRequest{
  string realmName = 1;
}

message updateUserAttributesRequest{
  string realmName = 1;
  string userId = 2;
  map<string, string> attributes = 3;
}

message UserResponse{
  com.sitech.dto.UserDto userDto = 1;
}

message UsersResponse{
  repeated com.sitech.dto.UserDto userDto = 1;
}

message GetUserGroupsResponse{
  repeated com.sitech.dto.GroupDto groupDto = 1;
}

message GetUserRoleResponse{
  repeated com.sitech.dto.RoleDto roleDto = 1;
}